--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ path = "src/lib.rs"
 test = false
 
 [dependencies]
+base64 = "0.9.1"
+hex = "0.3.2"
+openssl = "0.10.8"
 rand = "0.3.14"
-rust-crypto = "0.2.35"
-rustc-serialize = "0.3.19"
 url = "1.1.0"
