--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ base64 = "0.9.1"
 hex = "0.3.2"
 openssl = "0.10.8"
 rand = "0.3.14"
-url = "1.1.0"
+serde = "1.0.63"
+serde_derive = "1.0.63"
+serde_urlencoded = "0.5.1"
